scripts/nullaway/wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8.txt
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/Map.java:74: error: [NullAway] dereferenced expression cell is @Nullable
        return getNeighbor(cell.getId(), dir);
                               ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/Map.java:86: error: [NullAway] dereferenced expression cell is @Nullable
        return getDiagonalNeighbor(cell.getId(), dir);
                                       ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/ColorRenderer.java:18: error: [NullAway] assigning @Nullable expression to @NonNull field
        map_ = map;
             ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/ColorPlateTectonics.java:10: error: [NullAway] dereferenced expression cell is @Nullable
        cell.type_.getColor().apply();
            ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/continent/GrowingAlgorithm.java:54: error: [NullAway] dereferenced expression start_cell is @Nullable
        start_cell.type_ = type_;
                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/continent/GrowingAlgorithm.java:62: error: [NullAway] dereferenced expression cell is @Nullable
            cell.type_ = type_;
                ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/PlateTectonicsMap.java:28: error: [NullAway] dereferenced expression map_.getCell(index) is @Nullable
            map_.getCell(index).type_ = default_type_;
                               ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/WorldGenerationMap.java:61: error: [NullAway] dereferenced expression cell is @Nullable
                cell.setElevation(elevation_algo_.generate(x, y, cell));
                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/WorldGenerationMap.java:61: error: [NullAway] passing @Nullable parameter 'cell' where @NonNull is required
                cell.setElevation(elevation_algo_.generate(x, y, cell));
                                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/WorldGenerationMap.java:83: error: [NullAway] dereferenced expression cell is @Nullable
                cell.setRainfall(rainfall_algo_.generate(x, y, cell));
                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/WorldGenerationMap.java:83: error: [NullAway] passing @Nullable parameter 'cell' where @NonNull is required
                cell.setRainfall(rainfall_algo_.generate(x, y, cell));
                                                               ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/WorldGenerationMap.java:105: error: [NullAway] dereferenced expression cell is @Nullable
                cell.setTemperature(temperature_algo_.generate(x, y, cell));
                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/WorldGenerationMap.java:105: error: [NullAway] passing @Nullable parameter 'cell' where @NonNull is required
                cell.setTemperature(temperature_algo_.generate(x, y, cell));
                                                                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/generation/RainShadowAlgorithm.java:43: error: [NullAway] dereferenced expression map_.getMap().getCell(x, y) is @Nullable
        return map_.getMap().getCell(x, y).getElevation() > sea_level_ ? 0.0f : 1.0f;
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/generation/RainShadowAlgorithm.java:43: error: [NullAway] dereferenced expression map_.getMap() is @Nullable
        return map_.getMap().getCell(x, y).getElevation() > sea_level_ ? 0.0f : 1.0f;
                            ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/generation/RainShadowAlgorithm.java:51: error: [NullAway] dereferenced expression map is @Nullable
        int width = map.getWidth();
                       ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/generation/RainShadowAlgorithm.java:87: error: [NullAway] dereferenced expression map_.getMap() is @Nullable
        WorldGenerationCell cell = map_.getMap().getCell(x, y);
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/generation/RainShadowAlgorithm.java:88: error: [NullAway] dereferenced expression cell is @Nullable
        float elevation = cell.getElevation();
                              ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/generation/RainShadowAlgorithm.java:105: error: [NullAway] dereferenced expression map_.getMap() is @Nullable
        int cx = map_.getMap().getColumn(cell.getId());
                              ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/ColorRainfall.java:14: error: [NullAway] dereferenced expression cell is @Nullable
        float rainfall = cell.getRainfall();
                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/ColorTemperature.java:15: error: [NullAway] dereferenced expression cell is @Nullable
        float temperature = cell.getTemperature();
                                ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/ColorElevation.java:12: error: [NullAway] dereferenced expression cell is @Nullable
        float elevation = cell.getElevation();
                              ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/ColorLandAndWater.java:20: error: [NullAway] dereferenced expression cell is @Nullable
        float elevation = cell.getElevation();
                              ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/worldeditor/WorldEditor.java:149: error: [NullAway] dereferenced expression world_map_.getElevationAlgo() is @Nullable
            world_map_.getElevationAlgo().nextSeed();
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/worldeditor/WorldEditor.java:152: error: [NullAway] dereferenced expression world_map_.getTemperatureAlgo() is @Nullable
            world_map_.getTemperatureAlgo().nextSeed();
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/worldeditor/WorldEditor.java:155: error: [NullAway] dereferenced expression world_map_.getRainfallAlgo() is @Nullable
            world_map_.getRainfallAlgo().nextSeed();
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/worldeditor/TemperatureState.java:33: error: [NullAway] dereferenced expression map_.getMap() is @Nullable
        int width = map_.getMap().getWidth();
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/worldeditor/RainfallState.java:29: error: [NullAway] dereferenced expression map_.getMap() is @Nullable
        int width = map_.getMap().getWidth();
                                 ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
28 errors
